test/testssssql/frontend/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    LOAD
    IS
    HELP
    NOT
    ASC
    VIEW
    ALTER
    DESC

Grammar

Rule 0     S' -> start
Rule 1     start -> command ;
Rule 2     command -> ddl
Rule 3     command -> dml
Rule 4     command -> utility
Rule 5     command -> nothing
Rule 6     ddl -> createtable
Rule 7     ddl -> createindex
Rule 8     ddl -> droptable
Rule 9     ddl -> dropindex
Rule 10    ddl -> showtables
Rule 11    ddl -> alerttable
Rule 12    ddl -> createuser
Rule 13    ddl -> grantuser
Rule 14    ddl -> revokeuser
Rule 15    dml -> query
Rule 16    dml -> insert
Rule 17    dml -> delete
Rule 18    dml -> update
Rule 19    utility -> exit
Rule 20    utility -> print
Rule 21    showtables -> SHOW TABLES
Rule 22    createuser -> CREATE USER ID PASSWORD STRING
Rule 23    grantuser -> GRANT non_mrelation_list ON non_mrelation_list TO non_mrelation_list
Rule 24    revokeuser -> REVOKE non_mrelation_list ON non_mrelation_list FROM non_mrelation_list
Rule 25    alerttable -> ALERT TABLE ID ADD ID type
Rule 26    alerttable -> ALERT TABLE ID DROP non_mrelation_list
Rule 27    createtable -> CREATE TABLE ID ( non_mattrtype_list )
Rule 28    createindex -> CREATE INDEX ID ( ID )
Rule 29    droptable -> DROP TABLE ID
Rule 30    dropindex -> DROP INDEX ID ( ID )
Rule 31    print -> PRINT ID
Rule 32    exit -> EXIT
Rule 33    query -> SELECT non_mselect_clause FROM non_mrelation_list opwhere_clause
Rule 34    insert -> INSERT INTO ID VALUES inservalue_list
Rule 35    inservalue_list -> ( non_mvalue_list ) , inservalue_list
Rule 36    inservalue_list -> ( non_mvalue_list )
Rule 37    delete -> DELETE FROM ID opwhere_clause
Rule 38    update -> UPDATE ID SET relattr EQ relattr_or_value opwhere_clause
Rule 39    non_mattrtype_list -> attrtype , non_mattrtype_list
Rule 40    non_mattrtype_list -> attrtype
Rule 41    attrtype -> ID type
Rule 42    attrtype -> ID type ( INT )
Rule 43    attrtype -> PRIMARY KEY ( ID )
Rule 44    type -> INT
Rule 45    type -> CHAR
Rule 46    non_mselect_clause -> non_mrelattr_list
Rule 47    non_mselect_clause -> *
Rule 48    non_mrelattr_list -> relattr , non_mrelattr_list
Rule 49    non_mrelattr_list -> relattr
Rule 50    relattr -> ID . ID
Rule 51    relattr -> ID
Rule 52    non_mrelation_list -> relation , non_mrelation_list
Rule 53    non_mrelation_list -> relation
Rule 54    relation -> ID
Rule 55    opwhere_clause -> WHERE non_mcond_list
Rule 56    opwhere_clause -> nothing
Rule 57    non_mcond_list -> non_mcond_list AND non_mcond_list
Rule 58    non_mcond_list -> non_mcond_list OR non_mcond_list
Rule 59    non_mcond_list -> ( non_mcond_list )
Rule 60    non_mcond_list -> condition
Rule 61    condition -> relattr op relattr_or_value
Rule 62    condition -> relattr EQ null_value
Rule 63    condition -> relattr NE null_value
Rule 64    relattr_or_value -> relattr
Rule 65    relattr_or_value -> value
Rule 66    non_mvalue_list -> value , non_mvalue_list
Rule 67    non_mvalue_list -> value
Rule 68    non_mvalue_list -> null_value , non_mvalue_list
Rule 69    non_mvalue_list -> null_value
Rule 70    value -> STRING
Rule 71    value -> NUMBER
Rule 72    null_value -> NULL
Rule 73    op -> LT
Rule 74    op -> LE
Rule 75    op -> GT
Rule 76    op -> GE
Rule 77    op -> EQ
Rule 78    op -> NE
Rule 79    nothing -> <empty>

Terminals, with rules where they appear

(                    : 27 28 30 35 36 42 43 59
)                    : 27 28 30 35 36 42 43 59
*                    : 47
,                    : 35 39 48 52 66 68
.                    : 50
;                    : 1
ADD                  : 25
ALERT                : 25 26
ALTER                : 
AND                  : 57
ASC                  : 
CHAR                 : 45
CREATE               : 22 27 28
DELETE               : 37
DESC                 : 
DROP                 : 26 29 30
EQ                   : 38 62 77
EXIT                 : 32
FROM                 : 24 33 37
GE                   : 76
GRANT                : 23
GT                   : 75
HELP                 : 
ID                   : 22 25 25 26 27 28 28 29 30 30 31 34 37 38 41 42 43 50 50 51 54
INDEX                : 28 30
INSERT               : 34
INT                  : 42 44
INTO                 : 34
IS                   : 
KEY                  : 43
LE                   : 74
LOAD                 : 
LT                   : 73
NE                   : 63 78
NOT                  : 
NULL                 : 72
NUMBER               : 71
ON                   : 23 24
OR                   : 58
PASSWORD             : 22
PRIMARY              : 43
PRINT                : 31
REVOKE               : 24
SELECT               : 33
SET                  : 38
SHOW                 : 21
STRING               : 22 70
TABLE                : 25 26 27 29
TABLES               : 21
TO                   : 23
UPDATE               : 38
USER                 : 22
VALUES               : 34
VIEW                 : 
WHERE                : 55
error                : 

Nonterminals, with rules where they appear

alerttable           : 11
attrtype             : 39 40
command              : 1
condition            : 60
createindex          : 7
createtable          : 6
createuser           : 12
ddl                  : 2
delete               : 17
dml                  : 3
dropindex            : 9
droptable            : 8
exit                 : 19
grantuser            : 13
insert               : 16
inservalue_list      : 34 35
non_mattrtype_list   : 27 39
non_mcond_list       : 55 57 57 58 58 59
non_mrelation_list   : 23 23 23 24 24 24 26 33 52
non_mrelattr_list    : 46 48
non_mselect_clause   : 33
non_mvalue_list      : 35 36 66 68
nothing              : 5 56
null_value           : 62 63 68 69
op                   : 61
opwhere_clause       : 33 37 38
print                : 20
query                : 15
relation             : 52 53
relattr              : 38 48 49 61 62 63 64
relattr_or_value     : 38 61
revokeuser           : 14
showtables           : 10
start                : 0
type                 : 25 41 42
update               : 18
utility              : 4
value                : 65 66 67

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . command ;
    (2) command -> . ddl
    (3) command -> . dml
    (4) command -> . utility
    (5) command -> . nothing
    (6) ddl -> . createtable
    (7) ddl -> . createindex
    (8) ddl -> . droptable
    (9) ddl -> . dropindex
    (10) ddl -> . showtables
    (11) ddl -> . alerttable
    (12) ddl -> . createuser
    (13) ddl -> . grantuser
    (14) ddl -> . revokeuser
    (15) dml -> . query
    (16) dml -> . insert
    (17) dml -> . delete
    (18) dml -> . update
    (19) utility -> . exit
    (20) utility -> . print
    (79) nothing -> .
    (27) createtable -> . CREATE TABLE ID ( non_mattrtype_list )
    (28) createindex -> . CREATE INDEX ID ( ID )
    (29) droptable -> . DROP TABLE ID
    (30) dropindex -> . DROP INDEX ID ( ID )
    (21) showtables -> . SHOW TABLES
    (25) alerttable -> . ALERT TABLE ID ADD ID type
    (26) alerttable -> . ALERT TABLE ID DROP non_mrelation_list
    (22) createuser -> . CREATE USER ID PASSWORD STRING
    (23) grantuser -> . GRANT non_mrelation_list ON non_mrelation_list TO non_mrelation_list
    (24) revokeuser -> . REVOKE non_mrelation_list ON non_mrelation_list FROM non_mrelation_list
    (33) query -> . SELECT non_mselect_clause FROM non_mrelation_list opwhere_clause
    (34) insert -> . INSERT INTO ID VALUES inservalue_list
    (37) delete -> . DELETE FROM ID opwhere_clause
    (38) update -> . UPDATE ID SET relattr EQ relattr_or_value opwhere_clause
    (32) exit -> . EXIT
    (31) print -> . PRINT ID

    ;               reduce using rule 79 (nothing -> .)
    CREATE          shift and go to state 30
    DROP            shift and go to state 27
    SHOW            shift and go to state 24
    ALERT           shift and go to state 3
    GRANT           shift and go to state 12
    REVOKE          shift and go to state 14
    SELECT          shift and go to state 29
    INSERT          shift and go to state 5
    DELETE          shift and go to state 11
    UPDATE          shift and go to state 8
    EXIT            shift and go to state 23
    PRINT           shift and go to state 25

    createtable                    shift and go to state 1
    insert                         shift and go to state 16
    revokeuser                     shift and go to state 18
    query                          shift and go to state 2
    droptable                      shift and go to state 17
    showtables                     shift and go to state 4
    update                         shift and go to state 21
    utility                        shift and go to state 22
    exit                           shift and go to state 6
    print                          shift and go to state 7
    createindex                    shift and go to state 33
    dropindex                      shift and go to state 9
    nothing                        shift and go to state 26
    grantuser                      shift and go to state 10
    start                          shift and go to state 32
    delete                         shift and go to state 13
    alerttable                     shift and go to state 20
    command                        shift and go to state 19
    dml                            shift and go to state 15
    createuser                     shift and go to state 28
    ddl                            shift and go to state 31

state 1

    (6) ddl -> createtable .

    ;               reduce using rule 6 (ddl -> createtable .)


state 2

    (15) dml -> query .

    ;               reduce using rule 15 (dml -> query .)


state 3

    (25) alerttable -> ALERT . TABLE ID ADD ID type
    (26) alerttable -> ALERT . TABLE ID DROP non_mrelation_list

    TABLE           shift and go to state 34


state 4

    (10) ddl -> showtables .

    ;               reduce using rule 10 (ddl -> showtables .)


state 5

    (34) insert -> INSERT . INTO ID VALUES inservalue_list

    INTO            shift and go to state 35


state 6

    (19) utility -> exit .

    ;               reduce using rule 19 (utility -> exit .)


state 7

    (20) utility -> print .

    ;               reduce using rule 20 (utility -> print .)


state 8

    (38) update -> UPDATE . ID SET relattr EQ relattr_or_value opwhere_clause

    ID              shift and go to state 36


state 9

    (9) ddl -> dropindex .

    ;               reduce using rule 9 (ddl -> dropindex .)


state 10

    (13) ddl -> grantuser .

    ;               reduce using rule 13 (ddl -> grantuser .)


state 11

    (37) delete -> DELETE . FROM ID opwhere_clause

    FROM            shift and go to state 37


state 12

    (23) grantuser -> GRANT . non_mrelation_list ON non_mrelation_list TO non_mrelation_list
    (52) non_mrelation_list -> . relation , non_mrelation_list
    (53) non_mrelation_list -> . relation
    (54) relation -> . ID

    ID              shift and go to state 39

    relation                       shift and go to state 38
    non_mrelation_list             shift and go to state 40

state 13

    (17) dml -> delete .

    ;               reduce using rule 17 (dml -> delete .)


state 14

    (24) revokeuser -> REVOKE . non_mrelation_list ON non_mrelation_list FROM non_mrelation_list
    (52) non_mrelation_list -> . relation , non_mrelation_list
    (53) non_mrelation_list -> . relation
    (54) relation -> . ID

    ID              shift and go to state 39

    relation                       shift and go to state 38
    non_mrelation_list             shift and go to state 41

state 15

    (3) command -> dml .

    ;               reduce using rule 3 (command -> dml .)


state 16

    (16) dml -> insert .

    ;               reduce using rule 16 (dml -> insert .)


state 17

    (8) ddl -> droptable .

    ;               reduce using rule 8 (ddl -> droptable .)


state 18

    (14) ddl -> revokeuser .

    ;               reduce using rule 14 (ddl -> revokeuser .)


state 19

    (1) start -> command . ;

    ;               shift and go to state 42


state 20

    (11) ddl -> alerttable .

    ;               reduce using rule 11 (ddl -> alerttable .)


state 21

    (18) dml -> update .

    ;               reduce using rule 18 (dml -> update .)


state 22

    (4) command -> utility .

    ;               reduce using rule 4 (command -> utility .)


state 23

    (32) exit -> EXIT .

    ;               reduce using rule 32 (exit -> EXIT .)


state 24

    (21) showtables -> SHOW . TABLES

    TABLES          shift and go to state 43


state 25

    (31) print -> PRINT . ID

    ID              shift and go to state 44


state 26

    (5) command -> nothing .

    ;               reduce using rule 5 (command -> nothing .)


state 27

    (29) droptable -> DROP . TABLE ID
    (30) dropindex -> DROP . INDEX ID ( ID )

    TABLE           shift and go to state 46
    INDEX           shift and go to state 45


state 28

    (12) ddl -> createuser .

    ;               reduce using rule 12 (ddl -> createuser .)


state 29

    (33) query -> SELECT . non_mselect_clause FROM non_mrelation_list opwhere_clause
    (46) non_mselect_clause -> . non_mrelattr_list
    (47) non_mselect_clause -> . *
    (48) non_mrelattr_list -> . relattr , non_mrelattr_list
    (49) non_mrelattr_list -> . relattr
    (50) relattr -> . ID . ID
    (51) relattr -> . ID

    *               shift and go to state 47
    ID              shift and go to state 49

    relattr                        shift and go to state 50
    non_mrelattr_list              shift and go to state 48
    non_mselect_clause             shift and go to state 51

state 30

    (27) createtable -> CREATE . TABLE ID ( non_mattrtype_list )
    (28) createindex -> CREATE . INDEX ID ( ID )
    (22) createuser -> CREATE . USER ID PASSWORD STRING

    TABLE           shift and go to state 54
    INDEX           shift and go to state 53
    USER            shift and go to state 52


state 31

    (2) command -> ddl .

    ;               reduce using rule 2 (command -> ddl .)


state 32

    (0) S' -> start .



state 33

    (7) ddl -> createindex .

    ;               reduce using rule 7 (ddl -> createindex .)


state 34

    (25) alerttable -> ALERT TABLE . ID ADD ID type
    (26) alerttable -> ALERT TABLE . ID DROP non_mrelation_list

    ID              shift and go to state 55


state 35

    (34) insert -> INSERT INTO . ID VALUES inservalue_list

    ID              shift and go to state 56


state 36

    (38) update -> UPDATE ID . SET relattr EQ relattr_or_value opwhere_clause

    SET             shift and go to state 57


state 37

    (37) delete -> DELETE FROM . ID opwhere_clause

    ID              shift and go to state 58


state 38

    (52) non_mrelation_list -> relation . , non_mrelation_list
    (53) non_mrelation_list -> relation .

    ,               shift and go to state 59
    ;               reduce using rule 53 (non_mrelation_list -> relation .)
    TO              reduce using rule 53 (non_mrelation_list -> relation .)
    WHERE           reduce using rule 53 (non_mrelation_list -> relation .)
    ON              reduce using rule 53 (non_mrelation_list -> relation .)
    FROM            reduce using rule 53 (non_mrelation_list -> relation .)


state 39

    (54) relation -> ID .

    ,               reduce using rule 54 (relation -> ID .)
    TO              reduce using rule 54 (relation -> ID .)
    ;               reduce using rule 54 (relation -> ID .)
    FROM            reduce using rule 54 (relation -> ID .)
    ON              reduce using rule 54 (relation -> ID .)
    WHERE           reduce using rule 54 (relation -> ID .)


state 40

    (23) grantuser -> GRANT non_mrelation_list . ON non_mrelation_list TO non_mrelation_list

    ON              shift and go to state 60


state 41

    (24) revokeuser -> REVOKE non_mrelation_list . ON non_mrelation_list FROM non_mrelation_list

    ON              shift and go to state 61


state 42

    (1) start -> command ; .

    $end            reduce using rule 1 (start -> command ; .)


state 43

    (21) showtables -> SHOW TABLES .

    ;               reduce using rule 21 (showtables -> SHOW TABLES .)


state 44

    (31) print -> PRINT ID .

    ;               reduce using rule 31 (print -> PRINT ID .)


state 45

    (30) dropindex -> DROP INDEX . ID ( ID )

    ID              shift and go to state 62


state 46

    (29) droptable -> DROP TABLE . ID

    ID              shift and go to state 63


state 47

    (47) non_mselect_clause -> * .

    FROM            reduce using rule 47 (non_mselect_clause -> * .)


state 48

    (46) non_mselect_clause -> non_mrelattr_list .

    FROM            reduce using rule 46 (non_mselect_clause -> non_mrelattr_list .)


state 49

    (50) relattr -> ID . . ID
    (51) relattr -> ID .

    .               shift and go to state 64
    EQ              reduce using rule 51 (relattr -> ID .)
    NE              reduce using rule 51 (relattr -> ID .)
    LT              reduce using rule 51 (relattr -> ID .)
    LE              reduce using rule 51 (relattr -> ID .)
    GT              reduce using rule 51 (relattr -> ID .)
    GE              reduce using rule 51 (relattr -> ID .)
    ,               reduce using rule 51 (relattr -> ID .)
    FROM            reduce using rule 51 (relattr -> ID .)
    WHERE           reduce using rule 51 (relattr -> ID .)
    ;               reduce using rule 51 (relattr -> ID .)
    AND             reduce using rule 51 (relattr -> ID .)
    OR              reduce using rule 51 (relattr -> ID .)
    )               reduce using rule 51 (relattr -> ID .)


state 50

    (48) non_mrelattr_list -> relattr . , non_mrelattr_list
    (49) non_mrelattr_list -> relattr .

    ,               shift and go to state 65
    FROM            reduce using rule 49 (non_mrelattr_list -> relattr .)


state 51

    (33) query -> SELECT non_mselect_clause . FROM non_mrelation_list opwhere_clause

    FROM            shift and go to state 66


state 52

    (22) createuser -> CREATE USER . ID PASSWORD STRING

    ID              shift and go to state 67


state 53

    (28) createindex -> CREATE INDEX . ID ( ID )

    ID              shift and go to state 68


state 54

    (27) createtable -> CREATE TABLE . ID ( non_mattrtype_list )

    ID              shift and go to state 69


state 55

    (25) alerttable -> ALERT TABLE ID . ADD ID type
    (26) alerttable -> ALERT TABLE ID . DROP non_mrelation_list

    ADD             shift and go to state 70
    DROP            shift and go to state 71


state 56

    (34) insert -> INSERT INTO ID . VALUES inservalue_list

    VALUES          shift and go to state 72


state 57

    (38) update -> UPDATE ID SET . relattr EQ relattr_or_value opwhere_clause
    (50) relattr -> . ID . ID
    (51) relattr -> . ID

    ID              shift and go to state 49

    relattr                        shift and go to state 73

state 58

    (37) delete -> DELETE FROM ID . opwhere_clause
    (55) opwhere_clause -> . WHERE non_mcond_list
    (56) opwhere_clause -> . nothing
    (79) nothing -> .

    WHERE           shift and go to state 74
    ;               reduce using rule 79 (nothing -> .)

    nothing                        shift and go to state 75
    opwhere_clause                 shift and go to state 76

state 59

    (52) non_mrelation_list -> relation , . non_mrelation_list
    (52) non_mrelation_list -> . relation , non_mrelation_list
    (53) non_mrelation_list -> . relation
    (54) relation -> . ID

    ID              shift and go to state 39

    relation                       shift and go to state 38
    non_mrelation_list             shift and go to state 77

state 60

    (23) grantuser -> GRANT non_mrelation_list ON . non_mrelation_list TO non_mrelation_list
    (52) non_mrelation_list -> . relation , non_mrelation_list
    (53) non_mrelation_list -> . relation
    (54) relation -> . ID

    ID              shift and go to state 39

    relation                       shift and go to state 38
    non_mrelation_list             shift and go to state 78

state 61

    (24) revokeuser -> REVOKE non_mrelation_list ON . non_mrelation_list FROM non_mrelation_list
    (52) non_mrelation_list -> . relation , non_mrelation_list
    (53) non_mrelation_list -> . relation
    (54) relation -> . ID

    ID              shift and go to state 39

    relation                       shift and go to state 38
    non_mrelation_list             shift and go to state 79

state 62

    (30) dropindex -> DROP INDEX ID . ( ID )

    (               shift and go to state 80


state 63

    (29) droptable -> DROP TABLE ID .

    ;               reduce using rule 29 (droptable -> DROP TABLE ID .)


state 64

    (50) relattr -> ID . . ID

    ID              shift and go to state 81


state 65

    (48) non_mrelattr_list -> relattr , . non_mrelattr_list
    (48) non_mrelattr_list -> . relattr , non_mrelattr_list
    (49) non_mrelattr_list -> . relattr
    (50) relattr -> . ID . ID
    (51) relattr -> . ID

    ID              shift and go to state 49

    non_mrelattr_list              shift and go to state 82
    relattr                        shift and go to state 50

state 66

    (33) query -> SELECT non_mselect_clause FROM . non_mrelation_list opwhere_clause
    (52) non_mrelation_list -> . relation , non_mrelation_list
    (53) non_mrelation_list -> . relation
    (54) relation -> . ID

    ID              shift and go to state 39

    relation                       shift and go to state 38
    non_mrelation_list             shift and go to state 83

state 67

    (22) createuser -> CREATE USER ID . PASSWORD STRING

    PASSWORD        shift and go to state 84


state 68

    (28) createindex -> CREATE INDEX ID . ( ID )

    (               shift and go to state 85


state 69

    (27) createtable -> CREATE TABLE ID . ( non_mattrtype_list )

    (               shift and go to state 86


state 70

    (25) alerttable -> ALERT TABLE ID ADD . ID type

    ID              shift and go to state 87


state 71

    (26) alerttable -> ALERT TABLE ID DROP . non_mrelation_list
    (52) non_mrelation_list -> . relation , non_mrelation_list
    (53) non_mrelation_list -> . relation
    (54) relation -> . ID

    ID              shift and go to state 39

    relation                       shift and go to state 38
    non_mrelation_list             shift and go to state 88

state 72

    (34) insert -> INSERT INTO ID VALUES . inservalue_list
    (35) inservalue_list -> . ( non_mvalue_list ) , inservalue_list
    (36) inservalue_list -> . ( non_mvalue_list )

    (               shift and go to state 90

    inservalue_list                shift and go to state 89

state 73

    (38) update -> UPDATE ID SET relattr . EQ relattr_or_value opwhere_clause

    EQ              shift and go to state 91


state 74

    (55) opwhere_clause -> WHERE . non_mcond_list
    (57) non_mcond_list -> . non_mcond_list AND non_mcond_list
    (58) non_mcond_list -> . non_mcond_list OR non_mcond_list
    (59) non_mcond_list -> . ( non_mcond_list )
    (60) non_mcond_list -> . condition
    (61) condition -> . relattr op relattr_or_value
    (62) condition -> . relattr EQ null_value
    (63) condition -> . relattr NE null_value
    (50) relattr -> . ID . ID
    (51) relattr -> . ID

    (               shift and go to state 93
    ID              shift and go to state 49

    non_mcond_list                 shift and go to state 94
    condition                      shift and go to state 95
    relattr                        shift and go to state 92

state 75

    (56) opwhere_clause -> nothing .

    ;               reduce using rule 56 (opwhere_clause -> nothing .)


state 76

    (37) delete -> DELETE FROM ID opwhere_clause .

    ;               reduce using rule 37 (delete -> DELETE FROM ID opwhere_clause .)


state 77

    (52) non_mrelation_list -> relation , non_mrelation_list .

    ;               reduce using rule 52 (non_mrelation_list -> relation , non_mrelation_list .)
    TO              reduce using rule 52 (non_mrelation_list -> relation , non_mrelation_list .)
    WHERE           reduce using rule 52 (non_mrelation_list -> relation , non_mrelation_list .)
    ON              reduce using rule 52 (non_mrelation_list -> relation , non_mrelation_list .)
    FROM            reduce using rule 52 (non_mrelation_list -> relation , non_mrelation_list .)


state 78

    (23) grantuser -> GRANT non_mrelation_list ON non_mrelation_list . TO non_mrelation_list

    TO              shift and go to state 96


state 79

    (24) revokeuser -> REVOKE non_mrelation_list ON non_mrelation_list . FROM non_mrelation_list

    FROM            shift and go to state 97


state 80

    (30) dropindex -> DROP INDEX ID ( . ID )

    ID              shift and go to state 98


state 81

    (50) relattr -> ID . ID .

    EQ              reduce using rule 50 (relattr -> ID . ID .)
    NE              reduce using rule 50 (relattr -> ID . ID .)
    LT              reduce using rule 50 (relattr -> ID . ID .)
    LE              reduce using rule 50 (relattr -> ID . ID .)
    GT              reduce using rule 50 (relattr -> ID . ID .)
    GE              reduce using rule 50 (relattr -> ID . ID .)
    ,               reduce using rule 50 (relattr -> ID . ID .)
    FROM            reduce using rule 50 (relattr -> ID . ID .)
    WHERE           reduce using rule 50 (relattr -> ID . ID .)
    ;               reduce using rule 50 (relattr -> ID . ID .)
    AND             reduce using rule 50 (relattr -> ID . ID .)
    OR              reduce using rule 50 (relattr -> ID . ID .)
    )               reduce using rule 50 (relattr -> ID . ID .)


state 82

    (48) non_mrelattr_list -> relattr , non_mrelattr_list .

    FROM            reduce using rule 48 (non_mrelattr_list -> relattr , non_mrelattr_list .)


state 83

    (33) query -> SELECT non_mselect_clause FROM non_mrelation_list . opwhere_clause
    (55) opwhere_clause -> . WHERE non_mcond_list
    (56) opwhere_clause -> . nothing
    (79) nothing -> .

    WHERE           shift and go to state 74
    ;               reduce using rule 79 (nothing -> .)

    nothing                        shift and go to state 75
    opwhere_clause                 shift and go to state 99

state 84

    (22) createuser -> CREATE USER ID PASSWORD . STRING

    STRING          shift and go to state 100


state 85

    (28) createindex -> CREATE INDEX ID ( . ID )

    ID              shift and go to state 101


state 86

    (27) createtable -> CREATE TABLE ID ( . non_mattrtype_list )
    (39) non_mattrtype_list -> . attrtype , non_mattrtype_list
    (40) non_mattrtype_list -> . attrtype
    (41) attrtype -> . ID type
    (42) attrtype -> . ID type ( INT )
    (43) attrtype -> . PRIMARY KEY ( ID )

    ID              shift and go to state 103
    PRIMARY         shift and go to state 102

    non_mattrtype_list             shift and go to state 104
    attrtype                       shift and go to state 105

state 87

    (25) alerttable -> ALERT TABLE ID ADD ID . type
    (44) type -> . INT
    (45) type -> . CHAR

    INT             shift and go to state 108
    CHAR            shift and go to state 107

    type                           shift and go to state 106

state 88

    (26) alerttable -> ALERT TABLE ID DROP non_mrelation_list .

    ;               reduce using rule 26 (alerttable -> ALERT TABLE ID DROP non_mrelation_list .)


state 89

    (34) insert -> INSERT INTO ID VALUES inservalue_list .

    ;               reduce using rule 34 (insert -> INSERT INTO ID VALUES inservalue_list .)


state 90

    (35) inservalue_list -> ( . non_mvalue_list ) , inservalue_list
    (36) inservalue_list -> ( . non_mvalue_list )
    (66) non_mvalue_list -> . value , non_mvalue_list
    (67) non_mvalue_list -> . value
    (68) non_mvalue_list -> . null_value , non_mvalue_list
    (69) non_mvalue_list -> . null_value
    (70) value -> . STRING
    (71) value -> . NUMBER
    (72) null_value -> . NULL

    STRING          shift and go to state 110
    NUMBER          shift and go to state 109
    NULL            shift and go to state 114
